--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: node_js
+
+cache:
+  apt: true
+  directories:
+    - $HOME/.npm
+
+
 node_js:
   - "8"
   - "10"
+
+install:
+  - npm ci
