update readme; update published files

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dist/index.js.map",
     "dist/index.d.ts",
     "src/index.ts",
-    "package-lock.json"
+    "REaDME.md"
   ],
   "nyc": {
     "extension": [
