--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ cache:
   directories:
     - $HOME/.npm
 
-
 node_js:
   - "8"
   - "10"
+
+before_install:
+  echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > $HOME/.npmrc
 
