--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ node_js:
   - "10"
 
 before_install:
-  echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > $HOME/.npmrc
+  - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > $HOME/.npmrc
 
