--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ node_js:
 jobs:
   include:
     - stage: release
-      node_js: lts/*
+      node_js: 10
       deploy:
         provider: script
         skip_cleanup: true
