--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   },
   "devDependencies": {
     "@landau/eslint-config": "1.0.2",
+    "@semantic-release/changelog": "3.0.2",
+    "@semantic-release/git": "7.0.8",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "eslint": "5.16.0",
@@ -64,9 +66,9 @@
     "eslint-plugin-promise": "4.1.1",
     "nyc": "13.3.0",
     "prettier": "1.16.4",
+    "semantic-release": "15.13.3",
     "ts-node": "8.0.3",
-    "typescript": "3.4.3",
-    "semantic-release": "15.13.3"
+    "typescript": "3.4.3"
   },
   "dependencies": {
     "@types/node": "10.12.10"
