--- a/.releaserc
+++ b/.releaserc
@@ -8,6 +8,7 @@
         "changelogFile": "CHANGELOG.md"
       }
     ],
-    "@semantic-release/git"
+    "@semantic-release/git",
+    "@semantic-release/npm"
   ]
 }
