--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@landau/eslint-config": "1.0.2",
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
+    "@semantic-release/npm": "5.1.4",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "eslint": "5.16.0",
