--- a/.releaserc
+++ b/.releaserc
@@ -2,13 +2,8 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
-    "@semantic-release/git",
-    "@semantic-release/npm"
+    "@semantic-release/changelog",
+    "@semantic-release/npm",
+    "@semantic-release/git"
   ]
 }
