--- a/renovate.json
+++ b/renovate.json
@@ -36,5 +36,6 @@
       "labels": ["UPDATE-NON-MAJOR"],
       "semanticCommits": true
     }
-  ]
+  ],
+  "schedule": ["after 7pm on Thursday", "every weekend"]
 }
