--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
     "@semantic-release/npm": "5.1.15",
+    "@types/node": "10.14.18",
     "@typescript-eslint/eslint-plugin": "2.2.0",
     "@typescript-eslint/parser": "2.2.0",
     "eslint": "6.4.0",
@@ -71,7 +72,5 @@
     "ts-node": "8.4.1",
     "typescript": "3.6.3"
   },
-  "dependencies": {
-    "@types/node": "10.14.18"
-  }
+  "dependencies": {}
 }
