--- a/package.json
+++ b/package.json
@@ -54,22 +54,23 @@
     ]
   },
   "devDependencies": {
-    "@landau/eslint-config": "4.0.4",
+    "@landau/eslint-config": "4.0.5",
     "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/git": "9.0.0",
+    "@semantic-release/git": "9.0.1",
     "@semantic-release/npm": "7.1.3",
-    "@types/node": "16.0.0",
-    "@typescript-eslint/eslint-plugin": "4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@types/node": "16.9.1",
+    "@typescript-eslint/eslint-plugin": "4.31.0",
+    "@typescript-eslint/parser": "4.31.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "5.1.0",
     "nyc": "15.1.0",
-    "prettier": "2.3.2",
-    "semantic-release": "17.4.4",
-    "ts-node": "10.0.0",
-    "typescript": "4.3.5"
+    "prettier": "2.4.0",
+    "semantic-release": "17.4.7",
+    "source-map-support": "0.5.20",
+    "ts-node": "10.2.1",
+    "typescript": "4.4.3"
   }
 }
